// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnswerPage/> renders as expected 1`] = `
<section
  className="answer-page-container"
>
  <header>
    <h1
      className="answer-message-text"
    >
      The word was:
    </h1>
  </header>
  <p
    className="answer-word"
  />
</section>
`;

exports[`<AnswerPage/> renders nothing when no props given 1`] = `
<section
  className="answer-page-container"
>
  <header>
    <h1
      className="answer-message-text"
    >
      The word was:
    </h1>
  </header>
  <p
    className="answer-word"
  />
</section>
`;

exports[`<AnswerPage/> renders with answer prop when given 1`] = `
<section
  className="answer-page-container"
>
  <header>
    <h1
      className="answer-message-text"
    >
      The word was:
    </h1>
  </header>
  <p
    className="answer-word"
  >
    blue
  </p>
</section>
`;
